Tối Ưu Module Lịch Dạy (Calendar)